5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1644_2704.log
== TEST (2019-04-13 08:18:26) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao".upper())
print(o)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(o)
NameError: name 'o' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:20:35) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O = S):
	
-- ERROR:
File "XXXX", line 6
    if (O = S):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:22:40) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O = S):
	Nf= N + N* (10/100)
else:
	Nf= N

print(Nf)
-- ERROR:
File "XXXX", line 6
    if (O = S):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:23:07) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O == S):
	Nf= N + N* (10/100)
else:
	Nf= N

print(Nf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (O == S):
NameError: name 'S' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:23:28) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O == "S"):
	Nf= N + N* (10/100)
else:
	Nf= N

print(Nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 08:23:40) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O == "S"):
	Nf= N + N* (10/100)
else:
	Nf= N

print(Nf)
-- EXECUTION TIME:
0.205573
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 08:37:42) 
-- CODE:
#Nota do aluno
N= float(input("Insira a nota do aluno"))
#Opção
O= input("Insira se o aluno vai receber ou nao.(S/N)")

if (O == "S"):
	Nf= N + N* (10/100)
else:
	Nf= N

print(Nf)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
